[project]
name = "lora-finetune"
version = "0.1.0"
description = "LoRA fine-tuning CLI tool"
authors = [
    { name = "Jonathan Salem", email = "jonathansalem5@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate==1.8.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "arrow==1.3.0",
    "attrs==25.3.0",
    "bitsandbytes",
    "boto3==1.39.4",
    "botocore==1.39.4",
    "bravado==11.1.0",
    "bravado-core==6.1.1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cut-cross-entropy==25.1.1",
    "datasets==3.6.0",
    "dill==0.3.8",
    "docstring_parser==0.16",
    "filelock==3.18.0",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "future==1.0.0",
    "gguf==0.17.1",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "hf_transfer==0.1.9",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.33.1",
    "idna==3.10",
    "importlib_resources==6.5.2",
    "isoduration==20.11.0",
    "Jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mistral_common==1.8.3",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "msgspec==0.19.0",
    "multidict==6.5.1",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "numpy==2.3.1",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "oauthlib==3.3.1",
    "ollama==0.5.3",
    "packaging==25.0",
    "pandas==2.3.0",
    "peft==0.15.2",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==3.20.3",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pycountry==24.6.1",
    "pydantic==2.11.7",
    "pydantic-extra-types==2.10.5",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "s3transfer==0.13.0",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "sentencepiece==0.2.0",
    "setuptools==80.9.0",
    "shtab==1.7.2",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "swagger-spec-validator==3.0.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.53.2",
    "triton==3.3.1",
    "trl==0.19.1",
    "typeguard==4.4.4",
    "types-python-dateutil==2.9.0.20250708",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "tyro==0.9.26",
    "tzdata==2025.2",
    "unsloth @ git+https://github.com/unslothai/unsloth.git@7758e1da968b005ab0e5ec12889b88de1a0d1e03",
    "unsloth_zoo==2025.7.4",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "webcolors==24.11.1",
    "websocket-client==1.8.0",
    "wheel==0.45.1",
    "xformers==0.0.31.post1",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]

[project.scripts]
lora-finetuner = "lora_finetune.cli:entry"
